# norn

./: .gitignore  AGENTS.md  Cargo.toml  README.md  TODO.md  flake.nix
.cargo/: config.toml
.github/workflows/: benchmarks.yml  rust.yml
benches/: Cargo.toml  hyper.rs  io_uring_accept_recv.rs  noop_submit.rs  schedule_task.rs  support.rs  task_state.rs  timers.rs  uring_realworld.rs
examples/ping-pong-grpc/: Cargo.toml  README.md  build.rs
examples/ping-pong-grpc/proto/: pingpong.proto
examples/ping-pong-grpc/src/: main.rs
hack/: bench_compare.py  bench_run.py  lima-norn-uring.sh
norn-executor/examples/: bench_task_executor.rs
norn-executor/src/: lib.rs
norn-executor/src/park/: mod.rs
norn-nursery/: Cargo.toml
norn-nursery/src/: lib.rs
norn-task/: Cargo.toml
norn-task/src/: future_cell.rs  header.rs  join.rs  lib.rs  schedule.rs  state.rs  task_cell.rs  taskqueue.rs  tasks.rs
norn-timer/src/: clock.rs  context.rs  entry.rs  error.rs  level.rs  lib.rs  wheels.rs
norn-timer/src/tests/: smoke.rs
norn-uring/: Cargo.toml
norn-uring/src/: buf.rs  bufring.rs  error.rs  fd.rs  fixedbuf.rs  lib.rs  request.rs
norn-uring/src/driver/: futures.rs  mod.rs  unpark.rs
norn-uring/src/fs/: dir.rs  file.rs  mod.rs  opts.rs
norn-uring/src/net/: mod.rs  socket.rs  tcp.rs  udp.rs
norn-uring/src/operation/: header.rs  mod.rs  raw.rs
norn-uring/src/util/: mod.rs
norn-uring/tests/: file.rs  noop_submit.rs  request.rs  tcp.rs  udp.rs  util.rs
norn-util/src/: lib.rs  pollset.rs
