[workspace]
resolver = "2"
members = [
    "benches",
    "examples/ping-pong-grpc",
    "norn-executor",
    "norn-task",
    "norn-timer",
    "norn-uring",
    "norn-util",
]
default-members = ["norn-executor", "norn-task", "norn-timer", "norn-uring", "norn-util"]

[workspace.dependencies]
cordyceps = { version = "0.3" }
futures = { version = "0.3" }
pin-project-lite = { version = "0.2" }
thiserror = "2"
futures-test = { version = "0.3" }
futures-core = { version = "0.3" }
log = { version = "0.4" }
bytes = { version = "1" }

[profile.release]
codegen-units = 1
incremental = false

[profile.bench]
codegen-units = 1
incremental = false
