[package]
name = "benches"
version = "0.1.0"
publish = false
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
norn-task = { path = "../norn-task" }
norn-executor = { path = "../norn-executor" }
norn-timer = { path = "../norn-timer" }

[target.'cfg(target_os = "linux")'.dependencies]
norn-uring = { path = "../norn-uring" }
io-uring = "0.7.11"
hyper = { version = "1", features = ["client", "server", "http2"] }
pin-project-lite = "0.2.13"
tokio = { version = "1.35.0", features = ["io-util"] }
http-body-util = "0.1.0"

[dev-dependencies]
bencher = "0.1.5"
futures = "0.3.29"

[[bench]]
name = "schedule_task"
path = "schedule_task.rs"
harness = false

[[bench]]
name = "noop_submit"
path = "noop_submit.rs"
harness = false

[[bench]]
name = "timers"
path = "timers.rs"
harness = false

[[bench]]
name = "hyper"
path = "hyper.rs"
harness = false

[[bench]]
name = "task_state"
path = "task_state.rs"
harness = false

[[bench]]
name = "uring_realworld"
path = "uring_realworld.rs"
harness = false

[[bench]]
name = "io_uring_accept_recv"
path = "io_uring_accept_recv.rs"
harness = false
