[package]
name = "norn-uring"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
norn-executor = { path = "../norn-executor" }
futures-core.workspace = true
pin-project-lite.workspace = true
smallvec = "1.11.1"
sptr = "0.3.2"
thiserror.workspace = true
log.workspace = true
bytes.workspace = true
socket2 = "0.5.5"
cordyceps.workspace = true
tokio = { version = "1.35.0", features = ["io-util"] }

[target.'cfg(target_os = "linux")'.dependencies]
io-uring = { version = "0.7.2", features = ["io_safety"] }
libc = "0.2.149"

[dev-dependencies]
env_logger = "0.11.5"
futures-test.workspace = true
futures-util = "0.3.29"

