[package]
name = "ping-pong-grpc"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
norn-executor = { path = "../../norn-executor" }
norn-timer = { path = "../../norn-timer" }
futures-util = "0.3"
hyper = { version = "1", features = ["client", "server", "http2"] }
hyper-util = { version = "0.1", features = ["service"] }
pin-project-lite.workspace = true
prost = "0.14"
tokio = { version = "1.35.0", features = ["io-util"] }
tonic = { version = "0.14", features = ["transport"] }
tonic-prost = "0.14"

[target.'cfg(target_os = "linux")'.dependencies]
io-uring = "0.7"
norn-uring = { path = "../../norn-uring" }

[build-dependencies]
protoc-bin-vendored = "3"
tonic-prost-build = "0.14"
